Finalizando body e iniciando footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <ul class="header-container">
-            <li class="logo margin"><img width="90px"
+            <li class="logo margin"><img width="85px"
                     src="https://www.sp.senac.br/o/senac-theme/images/logo_senac_default.png" alt="Logo do Senac"></li>
             <li class="links"><a href="#">Cursos <i class="fa-solid fa-chevron-down"></i></a></li>
             <li class="links bolsas"><a href="#">Bolsas e Descontos <i class="fa-solid fa-chevron-down"></i></a></li>
@@ -68,7 +68,8 @@
         <section class="fast-access">
             <h2 class="fast-access-title">Acesso Rápido</h2>
             <div class="cards">
-                <div class="fast-access-cards"><i class="fa-solid fa-handshake-simple fa-2x"></i>Atendimento Corporativo</div>
+                <div class="fast-access-cards"><i class="fa-solid fa-handshake-simple fa-2x"></i>Atendimento Corporativo
+                </div>
                 <div class="fast-access-cards"><i class="fa-solid fa-book fa-2x"></i>Bolsas de Estudo</div>
                 <div class="fast-access-cards"><i class="fa-solid fa-cube fa-2x"></i>Cursos por área</div>
                 <div class="fast-access-cards"><i class="fa-solid fa-percent fa-2x"></i>Descontos e Parcelamento</div>
@@ -76,8 +77,104 @@
                 <div class="fast-access-cards"><i class="fa-solid fa-star fa-2x"></i>Trabalhe conosco</div>
             </div>
         </section>
-    </main>
 
+        <section class="senac-explore">
+            <h2 class="title-explore">Explore Senac</h2>
+            <div class="explore-cards">
+                <div class="cards-explore explore-1">
+                    <div class="up-content">
+                        <img src="./img/logo_senac_explore.png" alt="" class="logo-explore">
+                        <div class="title-card-explore">Ensino Médio Técnico</div>
+                        <div class="subtitle-card-explore">Senac São Paulo</div>
+                    </div>
+                    <div class="down-content">
+                        <div class="main-title-card">Turmas abertas para início em 2025</div>
+                        <button class="explore-btn">Buscar cursos</button>
+                    </div>
+                </div>
+                <div class="cards-explore explore-2">
+                    <div class="up-content">
+                        <img src="./img/exploresenac_escolapanelinha-selo.jpg" alt="" class="logo-explore">
+                        <div class="title-card-explore">Escola Panelinha</div>
+                        <div class="subtitle-card-explore">Senac São Paulo</div>
+                    </div>
+                    <div class="down-content">
+                        <div class="main-title-card">Turmas abertas para início em 2025</div>
+                        <button class="explore-btn">Buscar cursos</button>
+                    </div>
+                </div>
+                <div class="cards-explore explore-3">
+                    <div class="up-content">
+                        <img src="./img/logo_senac_explore.png" alt="" class="logo-explore">
+                        <div class="title-card-explore">Pós Graduação</div>
+                        <div class="subtitle-card-explore">Senac São Paulo</div>
+                    </div>
+                    <div class="down-content">
+                        <div class="main-title-card">Turmas abertas para início em 2025</div>
+                        <button class="explore-btn">Buscar cursos</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <img src="./img/senac-fecomercio.png" alt="Logo Senac" class="logo-footer" width="120px">
+        <div class="links-footer">
+            <ul class="list">
+                <li><a href="#">Senac EAD</a>
+                    <a href="#">Editora</a>
+                    <a href="#">Hotéis</a>
+                </li>
+            </ul>
+            <ul class="list">
+                <li><a href="#">Unidades e Campi</a>
+                    <a href="#">Sobre o Senac</a>
+                    <a href="#">Fale com a gente</a>
+                    <a href="#">Canal de Denúncias</a>
+                </li>
+            </ul>
+            <ul class="list">
+                <li><a href="#">Trabalhe Conosco</a>
+                    <a href="#">Licitação</a>
+                    <a href="#">Descontos e Parcelamento</a>
+                </li>
+            </ul>
+            <ul class="list">
+                <li><a href="#">Biblioteca</a>
+                    <a href="#">Blog</a>
+                </li>
+            </ul>
+        </div>
+        <div class="follow">
+            <p>Siga-nos</p>
+            <div class="follow-us">
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-pinterest"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-spotify"></i></a>
+                </div>
+                <div class="social-footer">
+                    <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
