--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <main class="main-container">
         <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-            <source src="./img/video-desktop-header.mp4" type="video/mp4"> 
+            <source src="./img/video-desktop-header.mp4" type="video/mp4">
         </video>
         <div class="filter">
             <div class="text-main">
@@ -49,7 +49,7 @@
                 <input type="text" placeholder="O que você procura?">
             </form>
         </div>
-        
+
         <section class="cursos">
             <h2 class="cursos-title">Conheça nossos cursos</h2>
             <div class="card-group">
@@ -87,8 +87,10 @@
                 <div class="cards-explore explore-1">
                     <div class="up-content">
                         <img src="./img/logo_senac_explore.png" alt="" class="logo-explore">
-                        <div class="title-card-explore">Ensino Médio Técnico</div>
-                        <div class="subtitle-card-explore">Senac São Paulo</div>
+                        <div class="try">
+                            <div class="title-card-explore">Ensino Médio Técnico</div>
+                            <div class="subtitle-card-explore">Senac São Paulo</div>
+                        </div>
                     </div>
                     <div class="down-content">
                         <div class="main-title-card">Turmas abertas para início em 2025</div>
@@ -98,8 +100,10 @@
                 <div class="cards-explore explore-2">
                     <div class="up-content">
                         <img src="./img/exploresenac_escolapanelinha-selo.jpg" alt="" class="logo-explore">
-                        <div class="title-card-explore">Escola Panelinha</div>
-                        <div class="subtitle-card-explore">Senac São Paulo</div>
+                        <div class="try">
+                            <div class="title-card-explore">Escola Panelinha</div>
+                            <div class="subtitle-card-explore">Senac São Paulo</div>
+                        </div>
                     </div>
                     <div class="down-content">
                         <div class="main-title-card">Turmas abertas para início em 2025</div>
@@ -109,8 +113,10 @@
                 <div class="cards-explore explore-3">
                     <div class="up-content">
                         <img src="./img/logo_senac_explore.png" alt="" class="logo-explore">
-                        <div class="title-card-explore">Pós Graduação</div>
-                        <div class="subtitle-card-explore">Senac São Paulo</div>
+                        <div class="try">
+                            <div class="title-card-explore">Pós Graduação</div>
+                            <div class="subtitle-card-explore">Senac São Paulo</div>
+                        </div>
                     </div>
                     <div class="down-content">
                         <div class="main-title-card">Turmas abertas para início em 2025</div>
