refazendo css com display flex

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./newStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <ul class="header-container">
+        <ul class="header-container flex">
             <li class="logo margin"><img src="https://www.sp.senac.br/o/senac-theme/images/logo_senac_default.png"
                     alt="Logo do Senac"></li>
             <li class="links"><a href="#">Cursos <i class="fa-solid fa-chevron-down"></i></a></li>
@@ -39,13 +39,13 @@
         <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
             <source src="./img/video-desktop-header.mp4" type="video/mp4">
         </video>
-        <div class="filter">
+        <div class="filter flex">
             <div class="text-main">
                 <h2 class="alternate-title">Quer saber? Senac</h2>
                 <p class="subtitle">Desperte seu potencial para você ir longe na profissão e na vida.</p>
             </div>
             <form action="#" class="main-search">
-                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                <i class="fa-solid fa-magnifying-glass fa-1x"></i>
                 <input type="text" placeholder="O que você procura?">
             </form>
         </div>
@@ -68,57 +68,57 @@
             </div>
         </section>
 
-        <section class="fast-access">
+        <section class="fast-access flex">
             <h2 class="fast-access-title">Acesso Rápido</h2>
-            <div class="cards">
-                <div class="fast-access-cards"><i class="fa-solid fa-handshake-simple fa-2x"></i>Atendimento Corporativo
+            <div class="cards flex">
+                <div class="fast-access-cards flex"><i class="fa-solid fa-handshake-simple fa-2x"></i>Atendimento Corporativo
                 </div>
-                <div class="fast-access-cards"><i class="fa-solid fa-book fa-2x"></i>Bolsas de Estudo</div>
-                <div class="fast-access-cards"><i class="fa-solid fa-cube fa-2x"></i>Cursos por área</div>
-                <div class="fast-access-cards"><i class="fa-solid fa-percent fa-2x"></i>Descontos e Parcelamento</div>
-                <div class="fast-access-cards"><i class="fa-solid fa-comments fa-2x"></i>Fale com a gente</div>
-                <div class="fast-access-cards"><i class="fa-solid fa-star fa-2x"></i>Trabalhe conosco</div>
+                <div class="fast-access-cards flex"><i class="fa-solid fa-book fa-2x"></i>Bolsas de Estudo</div>
+                <div class="fast-access-cards flex"><i class="fa-solid fa-cube fa-2x"></i>Cursos por área</div>
+                <div class="fast-access-cards flex"><i class="fa-solid fa-percent fa-2x"></i>Descontos e Parcelamento</div>
+                <div class="fast-access-cards flex"><i class="fa-solid fa-comments fa-2x"></i>Fale com a gente</div>
+                <div class="fast-access-cards flex"><i class="fa-solid fa-star fa-2x"></i>Trabalhe conosco</div>
             </div>
         </section>
 
         <section class="senac-explore">
             <h2 class="title-explore">Explore Senac</h2>
-            <div class="explore-cards">
+            <div class="explore-cards flex">
                 <div class="cards-explore explore-1">
-                    <div class="up-content">
+                    <div class="up-content flex">
                         <img src="./img/logo_senac_explore.png" alt="" class="logo-explore">
-                        <div class="try">
+                        <div>
                             <div class="title-card-explore">Ensino Médio Técnico</div>
                             <div class="subtitle-card-explore">Senac São Paulo</div>
                         </div>
                     </div>
-                    <div class="down-content">
+                    <div class="down-content flex">
                         <div class="main-title-card">Turmas abertas para início em 2025</div>
                         <button class="explore-btn">Buscar cursos</button>
                     </div>
                 </div>
                 <div class="cards-explore explore-2">
-                    <div class="up-content">
+                    <div class="up-content flex">
                         <img src="./img/exploresenac_escolapanelinha-selo.jpg" alt="" class="logo-explore">
-                        <div class="try">
+                        <div>
                             <div class="title-card-explore">Escola Panelinha</div>
                             <div class="subtitle-card-explore">Senac São Paulo</div>
                         </div>
                     </div>
-                    <div class="down-content">
+                    <div class="down-content flex">
                         <div class="main-title-card">Turmas abertas para início em 2025</div>
                         <button class="explore-btn">Buscar cursos</button>
                     </div>
                 </div>
                 <div class="cards-explore explore-3">
-                    <div class="up-content">
+                    <div class="up-content flex">
                         <img src="./img/logo_senac_explore.png" alt="" class="logo-explore">
-                        <div class="try">
+                        <div>
                             <div class="title-card-explore">Pós Graduação</div>
                             <div class="subtitle-card-explore">Senac São Paulo</div>
                         </div>
                     </div>
-                    <div class="down-content">
+                    <div class="down-content flex">
                         <div class="main-title-card">Turmas abertas para início em 2025</div>
                         <button class="explore-btn">Buscar cursos</button>
                     </div>
