--- a/index.html
+++ b/index.html
@@ -183,17 +183,17 @@
                 </div>
             </div>
         </div>
-        <div class="logo-superior">
-            <img src="./img/selo-curso-superior.svg" alt="Logo ensino superior">
-        </div>
+        
     </footer>
-    <div class="final-footer">
-        <div class="all">
-            <p>Copyright &copy 2020. Todos os Direitos Reservados</p>
-            <p>Serviço Nacional de Aprendizagem Comercial - SP</p>
-            <p>CNPJ: 03.709.814/0001-98</p>
-            <p>Política de Privacidade.</p>
-            <img class="img-blindado" src="./img/seal.png" alt="Site Blindado">
+    <div class="footer-bg">
+        <div class="final-footer">
+            <div class="all flex">
+                <img class="img-blindado" src="./img/seal.png" alt="Site Blindado">
+                <p>Copyright &copy 2020. Todos os Direitos Reservados</p>
+                <div class="logo-superior">
+                    <img src="./img/selo-curso-superior.svg" alt="Logo ensino superior">
+                </div>
+            </div>
         </div>
     </div>
 </body>
