finalizando novo css

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
         <section class="fast-access flex">
             <h2 class="fast-access-title">Acesso Rápido</h2>
             <div class="cards flex">
-                <div class="fast-access-cards flex"><i class="fa-solid fa-handshake-simple fa-2x"></i>Atendimento Corporativo
+                <div class="fast-access-cards flex"><i class="fa-solid fa-handshake-simple fa-2x"></i>Atendimento
+                    Corporativo
                 </div>
                 <div class="fast-access-cards flex"><i class="fa-solid fa-book fa-2x"></i>Bolsas de Estudo</div>
                 <div class="fast-access-cards flex"><i class="fa-solid fa-cube fa-2x"></i>Cursos por área</div>
-                <div class="fast-access-cards flex"><i class="fa-solid fa-percent fa-2x"></i>Descontos e Parcelamento</div>
+                <div class="fast-access-cards flex"><i class="fa-solid fa-percent fa-2x"></i>Descontos e Parcelamento
+                </div>
                 <div class="fast-access-cards flex"><i class="fa-solid fa-comments fa-2x"></i>Fale com a gente</div>
                 <div class="fast-access-cards flex"><i class="fa-solid fa-star fa-2x"></i>Trabalhe conosco</div>
             </div>
@@ -126,66 +128,127 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <img src="./img/senac-fecomercio.png" alt="Logo Senac" class="logo-footer" width="120px">
-        <div class="links-footer">
-            <ul class="list">
-                <li><a href="#">Senac EAD</a>
-                    <a href="#">Editora</a>
-                    <a href="#">Hotéis</a>
-                </li>
-            </ul>
-            <ul class="list">
-                <li><a href="#">Unidades e Campi</a>
-                    <a href="#">Sobre o Senac</a>
-                    <a href="#">Fale com a gente</a>
-                    <a href="#">Canal de Denúncias</a>
-                </li>
-            </ul>
-            <ul class="list">
-                <li><a href="#">Trabalhe Conosco</a>
-                    <a href="#">Licitação</a>
-                    <a href="#">Descontos e Parcelamento</a>
-                </li>
-            </ul>
-            <ul class="list">
-                <li><a href="#">Biblioteca</a>
-                    <a href="#">Blog</a>
-                </li>
-            </ul>
-        </div>
-        <div class="follow">
-            <p>Siga-nos</p>
-            <div class="follow-us">
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+
+    <div class="footer-bg">
+        <footer class="footer">
+            <div class="all-links flex">
+                <div class="footer-title our-courses">
+                    Nossos cursos
+                    <ul class="footer-content">
+                        <li>Livres</li>
+                        <li>Técnico</li>
+                        <li>Especialização Técnica</li>
+                        <li>Ensino Médio Técnico</li>
+                        <li>Idiomas</li>
+                        <li>Graduação</li>
+                        <li>Pós-Graduação</li>
+                        <li>Extensão Universitária</li>
+                    </ul>
                 </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+
+                <div class="column">
+                    <div class="footer-title services">
+                        Serviços
+                        <ul class="footer-content">
+                            <li>Senac EAD</li>
+                            <li>Editora</li>
+                            <li>Hotéis</li>
+                            <li>Biblioteca</li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-title bags-descount">
+                        Bolsas e descontos
+                        <ul class="footer-content">
+                            <li>Bolsas de Estudo</li>
+                            <li>Descontos e Parcelamento</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+
+                <div class="column">
+                    <div class="footer-title about-senac">
+                        Sobre o Senac
+                        <ul class="footer-content">
+                            <li>Quem somos</li>
+                            <li>Unidades e Campi</li>
+                            <li>Trabalhe Conosco</li>
+                            <li>Licitação</li>
+                            <li>Blog</li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-title to-enterprises">
+                        Para empresas
+                        <ul class="footer-content">
+                            <li>Atendimento Corporativo</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-youtube"></i></a>
-                </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-pinterest"></i></a>
-                </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-spotify"></i></a>
-                </div>
-                <div class="social-footer">
-                    <a href=""><i class="fa-brands fa-tiktok"></i></a>
+
+                <div class="column">
+                    <div class="footer-title atendimento">
+                        Atendimento
+                        <ul class="footer-content">
+                            <li>Fale com a gente</li>
+                            <li>Canal de Denúncias</li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-title our-politics">
+                        Nossas políticas
+                        <ul class="footer-content">
+                            <li>Compra Segura</li>
+                            <li>Política de Privacidade</li>
+                            <li>Política de Cookies</li>
+                            <li>Política de Mídias Sociais</li>
+                            <li>Termos de Uso</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-    </footer>
-    <div class="footer-bg">
+
+            <div class="social flex">
+                <div class="flex">
+                    <img src="./img/senac-fecomercio.png" alt="Logo Senac" class="logo-footer" width="120px">
+                    <div class="senac">
+                        <p>Serviço Nacional de Aprendizagem Comercial - SP</p>
+                        <p>CNPJ: 03.709.814/0001-98</p>
+                    </div>
+                </div>
+                <div class="follow">
+                    <div class="follow-us flex">
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-pinterest"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-spotify"></i></a>
+                        </div>
+                        <div class="social-footer">
+                            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <div class="last-footer-bg">
         <div class="final-footer">
             <div class="all flex">
                 <img class="img-blindado" src="./img/seal.png" alt="Site Blindado">
